# MultimodalEmotionRecognition

./: .gitignore  EXPERIMENT_LOG.md  OOP_REFACTOR_GUIDE.md  README.md  SYSTEM_SUMMARY.md  TECHNICAL_SUMMARY.md  TRAINING_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: Dockerfile  requirements.txt
backend/app/: config.py  infer.py  main.py  model_loader.py  preprocess.py  streaming.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
src/: eval.py  export_augmented_examples.py  export_optimized_model.py  inference_server.py  inference_worker.py  optimized_runtime.py  train.py
src/data/: ravdess.py
src/models/: audio.py  fusion.py  temporal.py  video.py  wavlm_audio.py
src/utils/: face_crop.py  metrics.py  seed.py
tests/: test_attention_integration.py  test_backend_services.py  test_data_services.py
