[project]
name = "multimodalemotionrecognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "opencv-python>=4.6.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.1.0",
    "tqdm>=4.64.0",
    "torchcodec>=0.1.0",
    "librosa>=0.9.0",
    "wandb>=0.13.0",
    "matplotlib>=3.5.0",
    "mediapipe>=0.10.32",
    "opencv-python-headless>=4.13.0.92",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
{ index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
